Add public reports (#11)
Reviewed-on: https://codeberg.org/poeticmetric/poeticmetric/pulls/11
Co-committed-by: Gokhan Sari <git@gokhan.sari.me>
